--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Flask-Login==0.2.11
 Flask-SQLAlchemy==2.0
 Flask-WhooshAlchemy==0.56
 Flask-WTF==0.11
+gunicorn==19.2.1
 itsdangerous==0.24
 Jinja2==2.7.3
 MarkupSafe==0.23
